# text16-compat

./: .gitignore  CHANGELOG.md  LICENSE  text16-compat.cabal
.github/workflows/: haskell.yml
generate-golden-tests/: Main.hs
src/Data/Text/: Compat.hs
src/Data/Text/Compat/: Golden.hs
test/: Main.hs
test-data/: golden.csv
