cabal-version:      3.4
name:               text16-compat
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alfredo Di Napoli
maintainer:         alfredo@well-typed.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Text.Compat
    build-depends:
      base >= 4.14.3.0 && <5,
    hs-source-dirs:   src
    default-language: Haskell2010
    if impl(ghc >= 9.2)
      cpp-options: -DUSE_TEXT_2
      build-depends:
        text >= 2.0
    else
      build-depends:
        text < 2.0

test-suite text16-compat-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.14.3.0 && < 5,
        text16-compat
